Publish sensor data as Vector3 instead

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,9 +14,16 @@ board = esp32dev
 framework = arduino
 monitor_speed = 115200
 board_microros_transport = wifi
+
+build_flags = 
+    -I lib
+    ; -I lib/uros_rover_message
+    ; -I lib/uros_rover_message/msg
+
 lib_deps = 
 	mirs240x/micro_ros_arduino@^2.0.7-humble
 	https://github.com/micro-ROS/micro_ros_platformio
 	dfrobot/DFRobot_QMC5883@^1.0.0
 	wollewald/MPU9250_WE@^1.2.15
 	teckel12/NewPing@^1.9.7
+    ; uros_rover_message
